--- a/src/Components/Cards/Slides.css
+++ b/src/Components/Cards/Slides.css
@@ -5,7 +5,7 @@
     margin: 10px;
     width: 270px;
     height: 416px;
-  
+    margin-top: 0px;
     border-radius: 20px;
     background: linear-gradient(0.12deg, #000000 0.1%, rgba(0, 0, 0, 0) 70%)
 }
