--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,23 @@
-.container {
-    display: flex;
 
+.header-area{
+   
+    background-color: transparent;
+}
+.navbar{
+    z-index: 999;
+    color: white;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: navy !important;
+    margin-left: 20px;
+  
+}
 .logo{
     width: 120px;
     height: 55px;
-    filter: brightness(0) invert(1);
+    filter: brightness(90%) invert(1);
+    color: grey;
     margin-left: 60px;
     margin-right: 85px;
 };
@@ -14,7 +25,17 @@
     background-color: transparent;
     color: white;
 }
-a.active{
-    color: white;
-}
 
+.nav-item{
+   font-size: 18px;
+   color: white;
+   filter: brightness(100%);
+}
+.btn-warning{
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 5px;
+    color: black;
+    background-color: goldenrod !important;
+}
