--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,25 +1,38 @@
-.home-area{
+
+.background{
     display: flex;
-}
+    background-image: url("/images/Background.png");
+    position: relative;
+    background-position: center;
+    justify-content: 'space-between';
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0px;
+    margin-top: -81px;
+    z-index: 1;
+    filter: brightness(80%);
+  }
 
 .destination-area{
+    position: absolute;
     display: flex;
     width: 680px;
     height: 440px;
-    margin-left: 80px;
-    margin-top: 50px;
+    margin-left: 0px;
+    margin-top: 20px;
     box-sizing: border-box;
-   
 }
 
-
 .places{
+    position: absolute;
     display: flex;
     width: 680px;
     height: 440px;
-    margin-left: 80px;
-    margin-top: 50px;
+    margin-left: 720px;
+    margin-top: 180px;
     box-sizing: border-box;
-   
+    
 }
 
