--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,17 +1,20 @@
+
+
 .login-area{
     position:absolute;
     align-items:center;
     text-align: center;
-    padding: 30px;
-    width: 570px;
-    height: 480px;
-    margin-left: 438px;
-    margin-top: 50px;
+    padding: 50px;
+    width: 470px;
+    height: 550px;
+    margin-left: 500px;
+    margin-top: -40px;
     background: #FFFFFF;
     border: 1px solid #ababab;
     border-radius: 5px;
-    BOX-sizing: border-box;
+    box-sizing: border-box;
     padding: 20px;
+    box-shadow: 10px grey ;
 }
 
 .account-area{
@@ -20,9 +23,9 @@
     text-align: center;
     padding: 30px;
     width: 570px;
-    height: 530px;
+    height: 585px;
     margin-left: 438px;
-    margin-top: 50px;
+    margin-top: 40px;
     background: #FFFFFF;
     border: 1px solid #ababab;
     border-radius: 5px;
@@ -31,8 +34,9 @@
 }
 
 .btn-log{
-    width: 150px;
-    height: 30px;
+    width: 300px;
+    height: 50px;
+    margin-top: 10px;
     border-radius: 5px;
     background-color: goldenrod;
 }
@@ -40,5 +44,24 @@
 .btn-social{
     background-color: transparent;
     border-radius: 20px;
-    width: 250px;
+    height: 40px;
+    width: 280px;
+}
+
+.input-area{
+    margin-top: 20px;
+}
+
+.forgot{
+    align-items: right;
+    float: right;
+    padding-left: 30px;
+}
+
+.fb-icon{
+    color: rgb(24, 74, 211);
+}
+
+.g-icon{
+    color: red;
 }
